--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Rishav0907/Rishav0907.github.io#readme",
   "dependencies": {
     "dev": "^0.1.3",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "typed.js": "^2.0.11"
   }
 }
